--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2287,10 +2287,8 @@ input, select, textarea {
 
 
 	#header {
-		background: #fff;
 		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.075);
 		color: inherit;
-		cursor: default;
 		font-size: 0.8em;
 		left: 0;
 		padding: 1em 1.5em;
@@ -2313,7 +2311,6 @@ input, select, textarea {
 			letter-spacing: 0.075em;
 			position: absolute;
 			right: 1.5em;
-			left: 1.5em;
 			text-transform: uppercase;
 			top: 0.75em;
 			text-align: center;
@@ -2402,9 +2399,11 @@ input, select, textarea {
 			animation: none;
 			background: transparent;
 			box-shadow: none;
-			color: #fff;
+			background-color: #0a2024;
+			color: #ffffff;
 			padding: 2em 2.5em;
-			position: absolute;
+			position: sticky;
+			height: 80px;
 		}
 
 			#header.alt nav {
@@ -2514,18 +2513,38 @@ input, select, textarea {
 	}
 
 
-/* Banner 首頁 */
+/* Banner */
 
+	.bannerPic7 {
+		background-image:  url("../../images/./Banner/影音作品.jpg");
+	}
+	.bannerPic6 {
+		background-image:  url("../../images/./Banner/活動規劃.jpg");
+	}
+	.bannerPic5 {
+		background-image:  url("../../images/./Banner/社群相關.jpg");
+	}
+	.bannerPic4 {
+		background-image:  url("../../images/./Banner/平面設計.png");
+	}
+	.bannerPic3 {
+		background-image:  url("../../images/./Banner/商業委託.png");
+	}
+	.bannerPic2 {
+		background-image:  url("../../images/./Banner/經歷.jpg");
+	}
+	.bannerPic1 {
+		background-image:  url("../../images/./Banner/封面.jpg");
+	}
 	#banner {
 		background-attachment: fixed;
-		background-color: #0e3810;
-		background-image:  url("../../images/./Banner/封面.jpg");
-		background-position:  top center;
+		background-color: #0d1c1e;
+		background-position: center 20px;
 		background-repeat: no-repeat;
 		background-size: cover;
 		color: #fff;
 		cursor: default;
-		padding: 14em 0;
+		padding: 15em 0;
 		text-align: center;
 	}
 
@@ -2584,90 +2603,6 @@ input, select, textarea {
 			}	
 
 
-/* Banner2 經歷 */
-
-#banner2 {
-	background-attachment: fixed;
-	background-color: #0e3810;
-	background-image:  url("../../images/./Banner/經歷.jpg");
-	background-position:  top center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	color: #fff;
-	cursor: default;
-	padding: 14em 0;
-	text-align: center;
-}
-
-
-	#banner .inner {
-		-moz-animation: reveal-banner 1s 0.25s ease-in-out;
-		-webkit-animation: reveal-banner 1s 0.25s ease-in-out;
-		-ms-animation: reveal-banner 1s 0.25s ease-in-out;
-		animation: reveal-banner 1s 0.25s ease-in-out;
-		-moz-animation-fill-mode: forwards;
-		-webkit-animation-fill-mode: forwards;
-		-ms-animation-fill-mode: forwards;
-		animation-fill-mode: forwards;
-		background: #0e3810;
-		color: #fff;
-		display: inline-block;
-		opacity: 0;
-		padding: 3em;
-		text-align: center;
-	}
-
-		#banner .inner header {
-			display: inline-block;
-			border-bottom: solid 2px;
-			border-top: solid 2px;
-			margin: 0 0 2em 0;
-			padding: 3px 0 3px 0;
-		}
-
-			#banner .inner header h2 {
-				border-bottom: solid 2px;
-				border-top: solid 2px;
-				font-size: 2.5em;
-				font-weight: 900;
-				letter-spacing: 0.2em;
-				margin: 0;
-				padding-left: 0.05em;
-				position: relative;
-				text-transform: uppercase;
-			}
-
-		#banner .inner p {
-			letter-spacing: 0.1em;
-			margin: 0;
-			text-transform: uppercase;
-		}
-
-			#banner .inner p a {
-				color: inherit;
-				font-weight: 400;
-				text-decoration: none;
-			}
-
-		#banner .inner footer {
-			margin: 2em 0 0 0;
-		}	
-
-/* Banner3 商業委託 */
-
-#banner3 {
-	background-attachment: fixed;
-	background-color: #0e3810;
-	background-image:  url("../../images/./Banner/商業委託.png");
-	background-position:  top center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	color: #fff;
-	cursor: default;
-	padding: 14em 0;
-	text-align: center;
-}
-
 
 	#banner .inner {
 		-moz-animation: reveal-banner 1s 0.25s ease-in-out;
@@ -2723,281 +2658,6 @@ input, select, textarea {
 		}	
 
 
-/* Banner4 平面設計 */
-
-#banner4 {
-	background-attachment: fixed;
-	background-color: #0e3810;
-	background-image:  url("../../images/./Banner/平面設計.png");
-	background-position:  top center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	color: #fff;
-	cursor: default;
-	padding: 14em 0;
-	text-align: center;
-}
-
-
-	#banner .inner {
-		-moz-animation: reveal-banner 1s 0.25s ease-in-out;
-		-webkit-animation: reveal-banner 1s 0.25s ease-in-out;
-		-ms-animation: reveal-banner 1s 0.25s ease-in-out;
-		animation: reveal-banner 1s 0.25s ease-in-out;
-		-moz-animation-fill-mode: forwards;
-		-webkit-animation-fill-mode: forwards;
-		-ms-animation-fill-mode: forwards;
-		animation-fill-mode: forwards;
-		background: #0e3810;
-		color: #fff;
-		display: inline-block;
-		opacity: 0;
-		padding: 3em;
-		text-align: center;
-	}
-
-		#banner .inner header {
-			display: inline-block;
-			border-bottom: solid 2px;
-			border-top: solid 2px;
-			margin: 0 0 2em 0;
-			padding: 3px 0 3px 0;
-		}
-
-			#banner .inner header h2 {
-				border-bottom: solid 2px;
-				border-top: solid 2px;
-				font-size: 2.5em;
-				font-weight: 900;
-				letter-spacing: 0.2em;
-				margin: 0;
-				padding-left: 0.05em;
-				position: relative;
-				text-transform: uppercase;
-			}
-
-		#banner .inner p {
-			letter-spacing: 0.1em;
-			margin: 0;
-			text-transform: uppercase;
-		}
-
-			#banner .inner p a {
-				color: inherit;
-				font-weight: 400;
-				text-decoration: none;
-			}
-
-		#banner .inner footer {
-			margin: 2em 0 0 0;
-		}	
-
-/* Banner5 社群相關 */
-
-#banner5 {
-	background-attachment: fixed;
-	background-color: #0e3810;
-	background-image:  url("../../images/./Banner/社群相關.jpg");
-	background-position:  top center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	color: #fff;
-	cursor: default;
-	padding: 14em 0;
-	text-align: center;
-}
-
-
-	#banner .inner {
-		-moz-animation: reveal-banner 1s 0.25s ease-in-out;
-		-webkit-animation: reveal-banner 1s 0.25s ease-in-out;
-		-ms-animation: reveal-banner 1s 0.25s ease-in-out;
-		animation: reveal-banner 1s 0.25s ease-in-out;
-		-moz-animation-fill-mode: forwards;
-		-webkit-animation-fill-mode: forwards;
-		-ms-animation-fill-mode: forwards;
-		animation-fill-mode: forwards;
-		background: #0e3810;
-		color: #fff;
-		display: inline-block;
-		opacity: 0;
-		padding: 3em;
-		text-align: center;
-	}
-
-		#banner .inner header {
-			display: inline-block;
-			border-bottom: solid 2px;
-			border-top: solid 2px;
-			margin: 0 0 2em 0;
-			padding: 3px 0 3px 0;
-		}
-
-			#banner .inner header h2 {
-				border-bottom: solid 2px;
-				border-top: solid 2px;
-				font-size: 2.5em;
-				font-weight: 900;
-				letter-spacing: 0.2em;
-				margin: 0;
-				padding-left: 0.05em;
-				position: relative;
-				text-transform: uppercase;
-			}
-
-		#banner .inner p {
-			letter-spacing: 0.1em;
-			margin: 0;
-			text-transform: uppercase;
-		}
-
-			#banner .inner p a {
-				color: inherit;
-				font-weight: 400;
-				text-decoration: none;
-			}
-
-		#banner .inner footer {
-			margin: 2em 0 0 0;
-		}	
-
-/* Banner6 活動規劃 */
-
-#banner6 {
-	background-attachment: fixed;
-	background-color: #0e3810;
-	background-image:  url("../../images/./Banner/活動規劃.jpg");
-	background-position:  top center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	color: #fff;
-	cursor: default;
-	padding: 14em 0;
-	text-align: center;
-}
-
-
-	#banner .inner {
-		-moz-animation: reveal-banner 1s 0.25s ease-in-out;
-		-webkit-animation: reveal-banner 1s 0.25s ease-in-out;
-		-ms-animation: reveal-banner 1s 0.25s ease-in-out;
-		animation: reveal-banner 1s 0.25s ease-in-out;
-		-moz-animation-fill-mode: forwards;
-		-webkit-animation-fill-mode: forwards;
-		-ms-animation-fill-mode: forwards;
-		animation-fill-mode: forwards;
-		background: #0e3810;
-		color: #fff;
-		display: inline-block;
-		opacity: 0;
-		padding: 3em;
-		text-align: center;
-	}
-
-		#banner .inner header {
-			display: inline-block;
-			border-bottom: solid 2px;
-			border-top: solid 2px;
-			margin: 0 0 2em 0;
-			padding: 3px 0 3px 0;
-		}
-
-			#banner .inner header h2 {
-				border-bottom: solid 2px;
-				border-top: solid 2px;
-				font-size: 2.5em;
-				font-weight: 900;
-				letter-spacing: 0.2em;
-				margin: 0;
-				padding-left: 0.05em;
-				position: relative;
-				text-transform: uppercase;
-			}
-
-		#banner .inner p {
-			letter-spacing: 0.1em;
-			margin: 0;
-			text-transform: uppercase;
-		}
-
-			#banner .inner p a {
-				color: inherit;
-				font-weight: 400;
-				text-decoration: none;
-			}
-
-		#banner .inner footer {
-			margin: 2em 0 0 0;
-		}	
-
-/* Banner7 影音作品 */
-
-#banner7 {
-	background-attachment: fixed;
-	background-color: #0e3810;
-	background-image:  url("../../images/./Banner/影音作品.jpg");
-	background-position:  top center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	color: #fff;
-	cursor: default;
-	padding: 14em 0;
-	text-align: center;
-}
-
-
-	#banner .inner {
-		-moz-animation: reveal-banner 1s 0.25s ease-in-out;
-		-webkit-animation: reveal-banner 1s 0.25s ease-in-out;
-		-ms-animation: reveal-banner 1s 0.25s ease-in-out;
-		animation: reveal-banner 1s 0.25s ease-in-out;
-		-moz-animation-fill-mode: forwards;
-		-webkit-animation-fill-mode: forwards;
-		-ms-animation-fill-mode: forwards;
-		animation-fill-mode: forwards;
-		background: #0e3810;
-		color: #fff;
-		display: inline-block;
-		opacity: 0;
-		padding: 3em;
-		text-align: center;
-	}
-
-		#banner .inner header {
-			display: inline-block;
-			border-bottom: solid 2px;
-			border-top: solid 2px;
-			margin: 0 0 2em 0;
-			padding: 3px 0 3px 0;
-		}
-
-			#banner .inner header h2 {
-				border-bottom: solid 2px;
-				border-top: solid 2px;
-				font-size: 2.5em;
-				font-weight: 900;
-				letter-spacing: 0.2em;
-				margin: 0;
-				padding-left: 0.05em;
-				position: relative;
-				text-transform: uppercase;
-			}
-
-		#banner .inner p {
-			letter-spacing: 0.1em;
-			margin: 0;
-			text-transform: uppercase;
-		}
-
-			#banner .inner p a {
-				color: inherit;
-				font-weight: 400;
-				text-decoration: none;
-			}
-
-		#banner .inner footer {
-			margin: 2em 0 0 0;
-		}	
 
 /* Main 標題字 */			
 header.special p strong {
