--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,9 +120,6 @@ input, select, textarea {
 		font-weight: 400;
 	}
 
-	p, ul, ol, dl, table, blockquote {
-		margin: 0 0 2em 0;
-	}
 
 	h1, h2, h3, h4, h5, h6 {
 		color: inherit;
@@ -3431,3 +3428,12 @@ header.special p strong {
 			}
 
 	}
+
+
+	.left {
+		padding-left: 51%;
+	  }
+
+	.right {
+		padding-right: 51%;
+	  }
