--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3432,11 +3432,11 @@ header.special p strong {
 	}
 
 
-	.left {
+	.txtleft {
 		padding-left: 51%;
 	  }
 
-	.right {
+	.txtright {
 		padding-right: 51%;
 	  }
 
