--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3432,11 +3432,11 @@ header.special p strong {
 	}
 
 
-	.txtleft {
+	.exexexexl {
 		padding-left: 51%;
 	  }
 
-	.txtright {
+	.exexexexr {
 		padding-right: 51%;
 	  }
 
